--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,10 +29,12 @@ nav:
                 - File: lua/docs/class/file.md
                 - Font: lua/docs/class/font.md
                 - GuiObject: coming-soon.md
+                - Socket: lua/docs/class/socket.md
                 - Entity: lua/docs/class/entity.md
                 - GameEvent: lua/docs/class/gameevent.md
                 - UserCmd: lua/docs/class/usercmd.md
                 - UserMessage: lua/docs/class/usermessage.md
+                - Texture: lua/docs/class/texture.md
                 - Vector3: lua/docs/class/vector3.md
             - Libraries:
                 - Entities: lua/docs/library/entities.md
