--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
                 - UserCmd: lua/docs/class/usercmd.md
                 - UserMessage: lua/docs/class/usermessage.md
                 - DrawModelContext: lua/docs/class/drawmodelcontext.md
+                - Trace: lua/docs/class/trace.md
             - Libraries:
                 - Entities: lua/docs/library/entities.md
                 - Input:
