--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,7 +62,7 @@ nav:
                     - OutlinedRect: lua/docs/library/draw/outlinedrect.md
                     - RoundedRect: lua/docs/library/draw/roundedrect.md
                     - RoundedRectFill: lua/docs/library/draw/roundedrectfill.md
-                    - ShadowRect: coming-soon.md
+                    - ShadowRect: lua/docs/library/draw/shadowrect.md
                     - Triangle: coming-soon.md
                     - FilledCircle: coming-soon.md
                     - OutlinedCircle: coming-soon.md
