--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,7 @@ nav:
                     - Triangle: lua/docs/library/draw/triangle.md
                     - FilledCircle: lua/docs/library/draw/filledcircle.md
                     - OutlinedCircle: lua/docs/library/draw/outlinedcircle.md
-                    - GetTextSize: coming-soon.md
+                    - GetTextSize: lua/docs/library/draw/gettextsize.md
                     - Text: coming-soon.md
                     - TextShadow: coming-soon.md
                     - GetScreenSize: coming-soon.md
