--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,7 @@ nav:
                     - OutlinedCircle: lua/docs/library/draw/outlinedcircle.md
                     - GetTextSize: lua/docs/library/draw/gettextsize.md
                     - Text: lua/docs/library/draw/text.md
-                    - TextShadow: coming-soon.md
+                    - TextShadow: lua/docs/library/draw/textshadow.md
                     - GetScreenSize: coming-soon.md
                     - CreateFont: coming-soon.md
                     - AddFontResource: coming-soon.md
