--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ site_description: 'Knowledge Base for developers and customers.'
 site_author: 'AIMWARE'
 copyright: '© 2021 AIMWARE. All rights reserved.'
 repo_url: https://github.com/AMWRNET/aimware-web-kb
+edit_uri: edit/master/private/
 
 docs_dir: 'private'
 site_dir: 'public/kb'
@@ -24,44 +25,75 @@ nav:
                 - RunScript: lua/docs/globals/runscript.md
                 - Print: lua/docs/globals/print.md
             - Classes:
-                - EspBuilder: coming-soon.md
                 - EulerAngles: lua/docs/class/eulerangles.md
+                - Material: lua/docs/class/material.md
                 - File: lua/docs/class/file.md
                 - Font: lua/docs/class/font.md
-                - GuiObject: coming-soon.md
-                - Socket: coming-soon.md
-                - Vector3: coming-soon.md
+                - GuiObject: lua/docs/class/guiobject.md
+                - Socket: lua/docs/class/socket.md
+                - Texture: lua/docs/class/texture.md
+                - Vector3: lua/docs/class/vector3.md
             - Libraries:
+                - Entities: lua/docs/library/entities.md
+                - Panorama: lua/docs/library/panorama.md
+                - Materials: lua/docs/library/materials.md
+                - Input:
+                    - GetMousePos: lua/docs/library/input/getmousepos.md
+                    - IsButtonDown: lua/docs/library/input/isbuttondown.md
+                    - IsButtonPressed: lua/docs/library/input/isbuttonpressed.md
+                    - IsButtonReleased: lua/docs/library/input/isbuttonreleased.md
+                    - GetMouseWheelDelta: lua/docs/library/input/getmousewheeldelta.md
+                    - Keylist: lua/docs/library/input/keylist.md
                 - Callbacks:
                     - Register: lua/docs/library/callbacks/register.md
                     - Unregister: lua/docs/library/callbacks/unregister.md
+                - Common:
+                    - Time: lua/docs/library/common/time.md
+                    - DecodePNG: lua/docs/library/common/decodepng.md
+                    - DecodeJPEG: lua/docs/library/common/decodejpeg.md
+                    - RasterizeSVG: lua/docs/library/common/rasterizesvg.md
                 - Draw:
-                    - Color: coming-soon.md
-                    - Line: coming-soon.md
-                    - FilledRect: coming-soon.md
-                    - OutlinedRect: coming-soon.md
-                    - RoundedRect: coming-soon.md
-                    - RoundedRectFill: coming-soon.md
-                    - ShadowRect: coming-soon.md
-                    - Triangle: coming-soon.md
-                    - FilledCircle: coming-soon.md
-                    - OutlinedCircle: coming-soon.md
-                    - GetTextSize: coming-soon.md
-                    - Text: coming-soon.md
-                    - TextShadow: coming-soon.md
-                    - GetScreenSize: coming-soon.md
-                    - CreateFont: coming-soon.md
-                    - AddFontResource: coming-soon.md
-                    - SetFont: coming-soon.md
-                    - CreateTexture: coming-soon.md
-                    - UpdateTexture: coming-soon.md
-                    - SetTexture: coming-soon.md
+                    - Color: lua/docs/library/draw/color.md
+                    - Line: lua/docs/library/draw/line.md
+                    - FilledRect: lua/docs/library/draw/filledrect.md
+                    - OutlinedRect: lua/docs/library/draw/outlinedrect.md
+                    - RoundedRect: lua/docs/library/draw/roundedrect.md
+                    - RoundedRectFill: lua/docs/library/draw/roundedrectfill.md
+                    - ShadowRect: lua/docs/library/draw/shadowrect.md
+                    - Triangle: lua/docs/library/draw/triangle.md
+                    - FilledCircle: lua/docs/library/draw/filledcircle.md
+                    - OutlinedCircle: lua/docs/library/draw/outlinedcircle.md
+                    - GetTextSize: lua/docs/library/draw/gettextsize.md
+                    - Text: lua/docs/library/draw/text.md
+                    - TextShadow: lua/docs/library/draw/textshadow.md
+                    - GetScreenSize: lua/docs/library/draw/getscreensize.md
+                    - CreateFont: lua/docs/library/draw/createfont.md
+                    - AddFontResource: lua/docs/library/draw/addfontresource.md
+                    - SetFont: lua/docs/library/draw/setfont.md
+                    - Fontlist: lua/docs/library/draw/fontlist.md
+                    - CreateTexture: lua/docs/library/draw/createtexture.md
+                    - UpdateTexture: lua/docs/library/draw/updatetexture.md
+                    - SetTexture: lua/docs/library/draw/settexture.md
                 - File:
-                    - Open: coming-soon.md
-                    - Delete: coming-soon.md
-                    - Enumerate: coming-soon.md
+                    - Open: lua/docs/library/file/open.md
+                    - Delete: lua/docs/library/file/delete.md
+                    - Enumerate: lua/docs/library/file/enumerate.md
                 - Gui:
-                    - Coming soon: coming-soon.md
+                    - Button: lua/docs/library/gui/button.md
+                    - Checkbox: lua/docs/library/gui/checkbox.md
+                    - Color Picker: lua/docs/library/gui/colorpicker.md
+                    - Combobox: lua/docs/library/gui/combobox.md
+                    - Command: lua/docs/library/gui/command.md
+                    - Custom: lua/docs/library/gui/custom.md
+                    - Editbox: lua/docs/library/gui/editbox.md
+                    - Groupbox: lua/docs/library/gui/groupbox.md
+                    - Keybox: lua/docs/library/gui/keybox.md
+                    - Listbox: lua/docs/library/gui/listbox.md
+                    - Multibox: lua/docs/library/gui/multibox.md
+                    - Slider: lua/docs/library/gui/slider.md
+                    - Tab: lua/docs/library/gui/tab.md
+                    - Text: lua/docs/library/gui/text.md
+                    - Window: lua/docs/library/gui/window.md
                 - HTTP:
                     - Get: lua/docs/library/http/get.md
                 - Network:
@@ -72,9 +104,16 @@ nav:
                     - Coming soon: coming-soon.md
             - Engine Specific:
                   - Source:
-                        - Callbacks: coming-soon.md
+                        - Callbacks: lua/docs/engine/source/callbacks.md
                         - Classes:
+                            - DrawModelContext: lua/docs/engine/source/class/drawmodelcontext.md
+                            - EspBuilder: lua/docs/engine/source/class/espbuilder.md
+                            - Entity: lua/docs/engine/source/class/entity.md
+                            - GameEvent: lua/docs/engine/source/class/gameevent.md
+                            - StringCmd: lua/docs/engine/source/class/stringcmd.md
                             - Trace: lua/docs/engine/source/class/trace.md
+                            - UserCmd: lua/docs/engine/source/class/usercmd.md
+                            - UserMessage: lua/docs/engine/source/class/usermessage.md
                         - Libraries:
                             - Engine:
                                 - GetMapName: lua/docs/engine/source/library/engine/getmapname.md
